--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,10 +1,54 @@
 .container {
+  /*overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;*/
   height: 5rem;
-
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+}
 
-  padding-left: 10%;
-  padding-right: 10%;
+.headerHorizontalPadding {
+  padding-left: 7%;
+  padding-right: 7%;
+}
+
+.desktopNav {
+  display: none;
+}
+
+.mobileNav {
+  display: block;
+}
+
+/*.mobileMenu {
+}*/
+
+.mobileMenuHidden {
+  display: none;
+}
+
+.mobileMenuShow {
+  display: block;
+}
+
+/* laptops */
+/* https://www.w3schools.com/howto/howto_css_media_query_breakpoints.asp */
+@media only screen and (min-width: 992px) {
+  .headerHorizontalPadding {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  .desktopNav {
+    display: block;
+  }
+  .mobileNav {
+    display: none;
+  }
+  .mobileMenu {
+    display: none;
+  }
 }
